--- a/Calculator/en.lproj/MainStoryboard.storyboard
+++ b/Calculator/en.lproj/MainStoryboard.storyboard
@@ -242,7 +242,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="enterPressed" destination="2" eventType="touchUpInside" id="wpI-AB-qNg"/>
+                                    <action selector="enterPressed:" destination="2" eventType="touchUpInside" id="OwM-rc-iVA"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Hr4-SV-lzy">
@@ -320,10 +320,18 @@
                                     <action selector="operationPressed:" destination="2" eventType="touchUpInside" id="e0I-Ce-4OW"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" minimumFontSize="10" id="iMM-dz-Qd6">
+                                <rect key="frame" x="20" y="404" width="280" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="brainDisplay" destination="iMM-dz-Qd6" id="bh3-hO-yF1"/>
                         <outlet property="display" destination="vbJ-5c-cUM" id="Hxc-nJ-DQz"/>
                     </connections>
                 </viewController>
@@ -335,6 +343,7 @@
         <class className="CalculatorViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CalculatorViewController.h"/>
             <relationships>
+                <relationship kind="outlet" name="brainDisplay" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="display" candidateClass="UILabel"/>
             </relationships>
         </class>
